@@ -182,7 +182,7 @@ Next version (4.05.0):
 - PR#7216, GPR#949: don't require double parens in Functor((val x))
   (Jacques Garrigue, review by Valentin Gatien-Baron)
 
-- PR#7414, GPR#929: Soundness bug with non-generalized type variable and functors
+- PR#7414, GPR#929: Soundness bug with non-generalized type variable and functor
   (Jacques Garrigue, report by Leo White)
 
 - PR#7421: Soundness bug with GADTs and lazy
@@ -192,7 +192,10 @@ Next version (4.05.0):
   (Jacques Garrigue, report by Stephen Dolan)
 
 - PR#7432: Linking modules compiled with -labels and -nolabels is not safe
-  (Jacques Garrigue, Report by Jeremy Yallop)
+  (Jacques Garrigue, report by Jeremy Yallop)
+
+- PR#7437: typing assert failure with nonrec priv
+  (Jacques Garrigue, report by Anil Madhavapeddy)
 
 - GPR#795: remove 256-character limitation on Sys.executable_name
   (Xavier Leroy)
